동일 클래스내 호출로 인한 비동기 실패 문제 해결